--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "knex": "^0.20.13",
     "pg": "^8.0.2",
+    "router": "^1.3.5",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
